# tec_titanic

./: README.md
dip-tec-titanic-api-main/: README.md  pyproject.toml  settings.toml
dip-tec-titanic-api-main/titanic_api/app/: main.py
dip-tec-titanic-api-main/titanic_api/app/models/: models.py
dip-tec-titanic-api-main/titanic_api/server/: main.py
dip-tec-titanic-api-main/titanic_api/server/classifier/: titanic_classifier.py
dip-tec-titanic-api-main/titanic_api/server/tests/unit/: test_classification_response.py
