[tool.poetry]
name = "titanic-api"
version = "0.1.0"
description = ""
authors = ["josevarbz <josevarbz@gmail.com>"]
readme = "README.md"
packages = [{include = "titanic_api"}]

[tool.poetry.dependencies]
python = "^3.9"
dynaconf = "^3.1.11"
pandas = "^1.5.2"
autopep8 = "^2.0.0"
scikit-learn = "^1.1.3"
path = "^16.6.0"
pydantic = "^1.10.2"
pytest = "^7.2.0"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
